# TMX-Parser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  TMXLayer.cpp  TMXLayer.h  TMXMap.cpp  TMXMap.h
src/: CMakeLists.txt  TMXData.cpp  TMXData.h  TMXLayer.cpp  TMXLayer.h  TMXMap.h  TMXTile.cpp  TMXTile.h
tests/: CMakeLists.txt  TMXMap_test.cpp  test_map.tmx
